mayde a semi good fix for overflowing middle

--- a/public/wp-content/themes/darkShells/style.css
+++ b/public/wp-content/themes/darkShells/style.css
@@ -210,7 +210,7 @@ input {
 }
 
 .excerpts {
-  padding-right:1em;
+  padding-right:2em;
 }
 
 .excerpt-container {
